Changes to msal-common docs

--- a/ref/msal-common/classes/_src_cache_cachemanager_.cachemanager.html
+++ b/ref/msal-common/classes/_src_cache_cachemanager_.cachemanager.html
@@ -189,7 +189,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html">ICacheManager</a>.<a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html#getaccount">getAccount</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L161">src/cache/CacheManager.ts:161</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L162">src/cache/CacheManager.ts:162</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -220,7 +220,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html">ICacheManager</a>.<a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html#getaccountsfilteredby">getAccountsFilteredBy</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L181">src/cache/CacheManager.ts:181</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L182">src/cache/CacheManager.ts:182</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -273,7 +273,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html">ICacheManager</a>.<a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html#getcredential">getCredential</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L170">src/cache/CacheManager.ts:170</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L171">src/cache/CacheManager.ts:171</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -304,7 +304,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html">ICacheManager</a>.<a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html#getcredentialsfilteredby">getCredentialsFilteredBy</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L248">src/cache/CacheManager.ts:248</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L249">src/cache/CacheManager.ts:249</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -388,7 +388,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html">ICacheManager</a>.<a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html#removeaccount">removeAccount</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L347">src/cache/CacheManager.ts:347</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L348">src/cache/CacheManager.ts:348</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -417,7 +417,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html">ICacheManager</a>.<a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html#removeaccountcontext">removeAccountContext</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L359">src/cache/CacheManager.ts:359</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L360">src/cache/CacheManager.ts:360</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -448,7 +448,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html">ICacheManager</a>.<a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html#removecredential">removeCredential</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L383">src/cache/CacheManager.ts:383</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L384">src/cache/CacheManager.ts:384</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -505,7 +505,7 @@
 					<a name="savecacherecord" class="tsd-anchor"></a>
 					<h3>save<wbr>Cache<wbr>Record</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">save<wbr>Cache<wbr>Record<span class="tsd-signature-symbol">(</span>cacheRecord<span class="tsd-signature-symbol">: </span><a href="_src_cache_entities_cacherecord_.cacherecord.html" class="tsd-signature-type">CacheRecord</a>, responseScopes<span class="tsd-signature-symbol">?: </span><a href="_src_request_scopeset_.scopeset.html" class="tsd-signature-type">ScopeSet</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">save<wbr>Cache<wbr>Record<span class="tsd-signature-symbol">(</span>cacheRecord<span class="tsd-signature-symbol">: </span><a href="_src_cache_entities_cacherecord_.cacherecord.html" class="tsd-signature-type">CacheRecord</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -526,9 +526,6 @@
 									<h5>cacheRecord: <a href="_src_cache_entities_cacherecord_.cacherecord.html" class="tsd-signature-type">CacheRecord</a></h5>
 									<div class="tsd-comment tsd-typography">
 									</div>
-								</li>
-								<li>
-									<h5><span class="tsd-flag ts-flagOptional">Optional</span> responseScopes: <a href="_src_request_scopeset_.scopeset.html" class="tsd-signature-type">ScopeSet</a></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -581,7 +578,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L471">src/cache/CacheManager.ts:471</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L472">src/cache/CacheManager.ts:472</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
