--- a/ref/msal-common/classes/_src_cache_cachemanager_.defaultstorageclass.html
+++ b/ref/msal-common/classes/_src_cache_cachemanager_.defaultstorageclass.html
@@ -127,7 +127,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="_src_cache_cachemanager_.cachemanager.html">CacheManager</a>.<a href="_src_cache_cachemanager_.cachemanager.html#clear">clear</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L500">src/cache/CacheManager.ts:500</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L501">src/cache/CacheManager.ts:501</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -145,7 +145,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="_src_cache_cachemanager_.cachemanager.html">CacheManager</a>.<a href="_src_cache_cachemanager_.cachemanager.html#containskey">containsKey</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L492">src/cache/CacheManager.ts:492</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L493">src/cache/CacheManager.ts:493</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
@@ -164,7 +164,7 @@
 								<p>Implementation of <a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html">ICacheManager</a>.<a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html#getaccount">getAccount</a></p>
 								<p>Inherited from <a href="_src_cache_cachemanager_.cachemanager.html">CacheManager</a>.<a href="_src_cache_cachemanager_.cachemanager.html#getaccount">getAccount</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L161">src/cache/CacheManager.ts:161</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L162">src/cache/CacheManager.ts:162</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -196,7 +196,7 @@
 								<p>Implementation of <a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html">ICacheManager</a>.<a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html#getaccountsfilteredby">getAccountsFilteredBy</a></p>
 								<p>Inherited from <a href="_src_cache_cachemanager_.cachemanager.html">CacheManager</a>.<a href="_src_cache_cachemanager_.cachemanager.html#getaccountsfilteredby">getAccountsFilteredBy</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L181">src/cache/CacheManager.ts:181</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L182">src/cache/CacheManager.ts:182</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -251,7 +251,7 @@
 								<p>Implementation of <a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html">ICacheManager</a>.<a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html#getcredential">getCredential</a></p>
 								<p>Inherited from <a href="_src_cache_cachemanager_.cachemanager.html">CacheManager</a>.<a href="_src_cache_cachemanager_.cachemanager.html#getcredential">getCredential</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L170">src/cache/CacheManager.ts:170</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L171">src/cache/CacheManager.ts:171</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -283,7 +283,7 @@
 								<p>Implementation of <a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html">ICacheManager</a>.<a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html#getcredentialsfilteredby">getCredentialsFilteredBy</a></p>
 								<p>Inherited from <a href="_src_cache_cachemanager_.cachemanager.html">CacheManager</a>.<a href="_src_cache_cachemanager_.cachemanager.html#getcredentialsfilteredby">getCredentialsFilteredBy</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L248">src/cache/CacheManager.ts:248</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L249">src/cache/CacheManager.ts:249</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -312,7 +312,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="_src_cache_cachemanager_.cachemanager.html">CacheManager</a>.<a href="_src_cache_cachemanager_.cachemanager.html#getitem">getItem</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L484">src/cache/CacheManager.ts:484</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L485">src/cache/CacheManager.ts:485</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">object</span></h4>
@@ -330,7 +330,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="_src_cache_cachemanager_.cachemanager.html">CacheManager</a>.<a href="_src_cache_cachemanager_.cachemanager.html#getkeys">getKeys</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L496">src/cache/CacheManager.ts:496</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L497">src/cache/CacheManager.ts:497</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></h4>
@@ -349,7 +349,7 @@
 								<p>Implementation of <a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html">ICacheManager</a>.<a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html#removeaccount">removeAccount</a></p>
 								<p>Inherited from <a href="_src_cache_cachemanager_.cachemanager.html">CacheManager</a>.<a href="_src_cache_cachemanager_.cachemanager.html#removeaccount">removeAccount</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L347">src/cache/CacheManager.ts:347</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L348">src/cache/CacheManager.ts:348</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -379,7 +379,7 @@
 								<p>Implementation of <a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html">ICacheManager</a>.<a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html#removeaccountcontext">removeAccountContext</a></p>
 								<p>Inherited from <a href="_src_cache_cachemanager_.cachemanager.html">CacheManager</a>.<a href="_src_cache_cachemanager_.cachemanager.html#removeaccountcontext">removeAccountContext</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L359">src/cache/CacheManager.ts:359</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L360">src/cache/CacheManager.ts:360</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -411,7 +411,7 @@
 								<p>Implementation of <a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html">ICacheManager</a>.<a href="../interfaces/_src_cache_interface_icachemanager_.icachemanager.html#removecredential">removeCredential</a></p>
 								<p>Inherited from <a href="_src_cache_cachemanager_.cachemanager.html">CacheManager</a>.<a href="_src_cache_cachemanager_.cachemanager.html#removecredential">removeCredential</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L383">src/cache/CacheManager.ts:383</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L384">src/cache/CacheManager.ts:384</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -442,7 +442,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="_src_cache_cachemanager_.cachemanager.html">CacheManager</a>.<a href="_src_cache_cachemanager_.cachemanager.html#removeitem">removeItem</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L488">src/cache/CacheManager.ts:488</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L489">src/cache/CacheManager.ts:489</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
@@ -453,7 +453,7 @@
 					<a name="savecacherecord" class="tsd-anchor"></a>
 					<h3>save<wbr>Cache<wbr>Record</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">save<wbr>Cache<wbr>Record<span class="tsd-signature-symbol">(</span>cacheRecord<span class="tsd-signature-symbol">: </span><a href="_src_cache_entities_cacherecord_.cacherecord.html" class="tsd-signature-type">CacheRecord</a>, responseScopes<span class="tsd-signature-symbol">?: </span><a href="_src_request_scopeset_.scopeset.html" class="tsd-signature-type">ScopeSet</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">save<wbr>Cache<wbr>Record<span class="tsd-signature-symbol">(</span>cacheRecord<span class="tsd-signature-symbol">: </span><a href="_src_cache_entities_cacherecord_.cacherecord.html" class="tsd-signature-type">CacheRecord</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -476,9 +476,6 @@
 									<div class="tsd-comment tsd-typography">
 									</div>
 								</li>
-								<li>
-									<h5><span class="tsd-flag ts-flagOptional">Optional</span> responseScopes: <a href="_src_request_scopeset_.scopeset.html" class="tsd-signature-type">ScopeSet</a></h5>
-								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 						</li>
@@ -495,7 +492,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="_src_cache_cachemanager_.cachemanager.html">CacheManager</a>.<a href="_src_cache_cachemanager_.cachemanager.html#setitem">setItem</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L480">src/cache/CacheManager.ts:480</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L481">src/cache/CacheManager.ts:481</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -513,7 +510,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_src_cache_cachemanager_.cachemanager.html">CacheManager</a>.<a href="_src_cache_cachemanager_.cachemanager.html#toobject">toObject</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L471">src/cache/CacheManager.ts:471</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/CacheManager.ts#L472">src/cache/CacheManager.ts:472</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
