--- a/ref/msal-common/interfaces/_src_cache_interface_icachemanager_.icachemanager.html
+++ b/ref/msal-common/interfaces/_src_cache_interface_icachemanager_.icachemanager.html
@@ -115,7 +115,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L35">src/cache/interface/ICacheManager.ts:35</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L34">src/cache/interface/ICacheManager.ts:34</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -145,7 +145,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L49">src/cache/interface/ICacheManager.ts:49</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L48">src/cache/interface/ICacheManager.ts:48</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -173,7 +173,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L23">src/cache/interface/ICacheManager.ts:23</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L22">src/cache/interface/ICacheManager.ts:22</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -195,7 +195,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L41">src/cache/interface/ICacheManager.ts:41</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L40">src/cache/interface/ICacheManager.ts:40</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -225,7 +225,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L60">src/cache/interface/ICacheManager.ts:60</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L59">src/cache/interface/ICacheManager.ts:59</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -253,7 +253,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L66">src/cache/interface/ICacheManager.ts:66</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L65">src/cache/interface/ICacheManager.ts:65</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -281,7 +281,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L72">src/cache/interface/ICacheManager.ts:72</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L71">src/cache/interface/ICacheManager.ts:71</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -311,7 +311,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L78">src/cache/interface/ICacheManager.ts:78</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L77">src/cache/interface/ICacheManager.ts:77</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -335,13 +335,13 @@
 					<a name="savecacherecord" class="tsd-anchor"></a>
 					<h3>save<wbr>Cache<wbr>Record</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface">
-						<li class="tsd-signature tsd-kind-icon">save<wbr>Cache<wbr>Record<span class="tsd-signature-symbol">(</span>cacheRecord<span class="tsd-signature-symbol">: </span><a href="../classes/_src_cache_entities_cacherecord_.cacherecord.html" class="tsd-signature-type">CacheRecord</a>, responseScopes<span class="tsd-signature-symbol">: </span><a href="../classes/_src_request_scopeset_.scopeset.html" class="tsd-signature-type">ScopeSet</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">save<wbr>Cache<wbr>Record<span class="tsd-signature-symbol">(</span>cacheRecord<span class="tsd-signature-symbol">: </span><a href="../classes/_src_cache_entities_cacherecord_.cacherecord.html" class="tsd-signature-type">CacheRecord</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L29">src/cache/interface/ICacheManager.ts:29</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/interface/ICacheManager.ts#L28">src/cache/interface/ICacheManager.ts:28</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -355,9 +355,6 @@
 									<h5>cacheRecord: <a href="../classes/_src_cache_entities_cacherecord_.cacherecord.html" class="tsd-signature-type">CacheRecord</a></h5>
 									<div class="tsd-comment tsd-typography">
 									</div>
-								</li>
-								<li>
-									<h5>responseScopes: <a href="../classes/_src_request_scopeset_.scopeset.html" class="tsd-signature-type">ScopeSet</a></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
