--- a/ref/msal-common/classes/_src_response_responsehandler_.responsehandler.html
+++ b/ref/msal-common/classes/_src_response_responsehandler_.responsehandler.html
@@ -95,11 +95,10 @@
 						<section class="tsd-index-section ">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_src_response_responsehandler_.responsehandler.html#generateaccountentity" class="tsd-kind-icon">generate<wbr>Account<wbr>Entity</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_src_response_responsehandler_.responsehandler.html#generateauthenticationresult" class="tsd-kind-icon">generate<wbr>Authentication<wbr>Result</a></li>
-								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_src_response_responsehandler_.responsehandler.html#generatecacherecord" class="tsd-kind-icon">generate<wbr>Cache<wbr>Record</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_src_response_responsehandler_.responsehandler.html#handleservertokenresponse" class="tsd-kind-icon">handle<wbr>Server<wbr>Token<wbr>Response</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_src_response_responsehandler_.responsehandler.html#validateserverauthorizationcoderesponse" class="tsd-kind-icon">validate<wbr>Server<wbr>Authorization<wbr>Code<wbr>Response</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_src_response_responsehandler_.responsehandler.html#validatetokenresponse" class="tsd-kind-icon">validate<wbr>Token<wbr>Response</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><a href="_src_response_responsehandler_.responsehandler.html#generateauthenticationresult" class="tsd-kind-icon">generate<wbr>Authentication<wbr>Result</a></li>
 							</ul>
 						</section>
 					</div>
@@ -143,46 +142,10 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Methods</h2>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="generateaccountentity" class="tsd-anchor"></a>
-					<h3>generate<wbr>Account<wbr>Entity</h3>
+					<a name="handleservertokenresponse" class="tsd-anchor"></a>
+					<h3>handle<wbr>Server<wbr>Token<wbr>Response</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">generate<wbr>Account<wbr>Entity<span class="tsd-signature-symbol">(</span>serverTokenResponse<span class="tsd-signature-symbol">: </span><a href="../modules/_src_server_serverauthorizationtokenresponse_.html#serverauthorizationtokenresponse" class="tsd-signature-type">ServerAuthorizationTokenResponse</a>, idToken<span class="tsd-signature-symbol">: </span><a href="_src_account_idtoken_.idtoken.html" class="tsd-signature-type">IdToken</a>, authority<span class="tsd-signature-symbol">: </span><a href="_src_authority_authority_.authority.html" class="tsd-signature-type">Authority</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_src_cache_entities_accountentity_.accountentity.html" class="tsd-signature-type">AccountEntity</a></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/ResponseHandler.ts#L146">src/response/ResponseHandler.ts:146</a></li>
-								</ul>
-							</aside>
-							<div class="tsd-comment tsd-typography">
-								<div class="lead">
-									<p>Generate Account</p>
-								</div>
-							</div>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>serverTokenResponse: <a href="../modules/_src_server_serverauthorizationtokenresponse_.html#serverauthorizationtokenresponse" class="tsd-signature-type">ServerAuthorizationTokenResponse</a></h5>
-								</li>
-								<li>
-									<h5>idToken: <a href="_src_account_idtoken_.idtoken.html" class="tsd-signature-type">IdToken</a></h5>
-								</li>
-								<li>
-									<h5>authority: <a href="_src_authority_authority_.authority.html" class="tsd-signature-type">Authority</a></h5>
-									<div class="tsd-comment tsd-typography">
-									</div>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="_src_cache_entities_accountentity_.accountentity.html" class="tsd-signature-type">AccountEntity</a></h4>
-						</li>
-					</ul>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="generateauthenticationresult" class="tsd-anchor"></a>
-					<h3>generate<wbr>Authentication<wbr>Result</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">generate<wbr>Authentication<wbr>Result<span class="tsd-signature-symbol">(</span>serverTokenResponse<span class="tsd-signature-symbol">: </span><a href="../modules/_src_server_serverauthorizationtokenresponse_.html#serverauthorizationtokenresponse" class="tsd-signature-type">ServerAuthorizationTokenResponse</a>, authority<span class="tsd-signature-symbol">: </span><a href="_src_authority_authority_.authority.html" class="tsd-signature-type">Authority</a>, cachedNonce<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span>, cachedState<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_src_response_authenticationresult_.authenticationresult.html" class="tsd-signature-type">AuthenticationResult</a></li>
+						<li class="tsd-signature tsd-kind-icon">handle<wbr>Server<wbr>Token<wbr>Response<span class="tsd-signature-symbol">(</span>serverTokenResponse<span class="tsd-signature-symbol">: </span><a href="../modules/_src_server_serverauthorizationtokenresponse_.html#serverauthorizationtokenresponse" class="tsd-signature-type">ServerAuthorizationTokenResponse</a>, authority<span class="tsd-signature-symbol">: </span><a href="_src_authority_authority_.authority.html" class="tsd-signature-type">Authority</a>, cachedNonce<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span>, cachedState<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_src_response_authenticationresult_.authenticationresult.html" class="tsd-signature-type">AuthenticationResult</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -214,45 +177,6 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <a href="_src_response_authenticationresult_.authenticationresult.html" class="tsd-signature-type">AuthenticationResult</a></h4>
-						</li>
-					</ul>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
-					<a name="generatecacherecord" class="tsd-anchor"></a>
-					<h3>generate<wbr>Cache<wbr>Record</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">generate<wbr>Cache<wbr>Record<span class="tsd-signature-symbol">(</span>serverTokenResponse<span class="tsd-signature-symbol">: </span><a href="../modules/_src_server_serverauthorizationtokenresponse_.html#serverauthorizationtokenresponse" class="tsd-signature-type">ServerAuthorizationTokenResponse</a>, idTokenObj<span class="tsd-signature-symbol">: </span><a href="_src_account_idtoken_.idtoken.html" class="tsd-signature-type">IdToken</a>, authority<span class="tsd-signature-symbol">: </span><a href="_src_authority_authority_.authority.html" class="tsd-signature-type">Authority</a>, libraryState<span class="tsd-signature-symbol">?: </span><a href="../modules/_src_utils_protocolutils_.html#librarystateobject" class="tsd-signature-type">LibraryStateObject</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_src_cache_entities_cacherecord_.cacherecord.html" class="tsd-signature-type">CacheRecord</a></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/ResponseHandler.ts#L164">src/response/ResponseHandler.ts:164</a></li>
-								</ul>
-							</aside>
-							<div class="tsd-comment tsd-typography">
-								<div class="lead">
-									<p>Generates CacheRecord</p>
-								</div>
-							</div>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>serverTokenResponse: <a href="../modules/_src_server_serverauthorizationtokenresponse_.html#serverauthorizationtokenresponse" class="tsd-signature-type">ServerAuthorizationTokenResponse</a></h5>
-								</li>
-								<li>
-									<h5>idTokenObj: <a href="_src_account_idtoken_.idtoken.html" class="tsd-signature-type">IdToken</a></h5>
-								</li>
-								<li>
-									<h5>authority: <a href="_src_authority_authority_.authority.html" class="tsd-signature-type">Authority</a></h5>
-									<div class="tsd-comment tsd-typography">
-									</div>
-								</li>
-								<li>
-									<h5><span class="tsd-flag ts-flagOptional">Optional</span> libraryState: <a href="../modules/_src_utils_protocolutils_.html#librarystateobject" class="tsd-signature-type">LibraryStateObject</a></h5>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="_src_cache_entities_cacherecord_.cacherecord.html" class="tsd-signature-type">CacheRecord</a></h4>
 						</li>
 					</ul>
 				</section>
@@ -322,6 +246,46 @@
 						</li>
 					</ul>
 				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-static">
+					<a name="generateauthenticationresult" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagStatic">Static</span> generate<wbr>Authentication<wbr>Result</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-static">
+						<li class="tsd-signature tsd-kind-icon">generate<wbr>Authentication<wbr>Result<span class="tsd-signature-symbol">(</span>cacheRecord<span class="tsd-signature-symbol">: </span><a href="_src_cache_entities_cacherecord_.cacherecord.html" class="tsd-signature-type">CacheRecord</a>, idTokenObj<span class="tsd-signature-symbol">: </span><a href="_src_account_idtoken_.idtoken.html" class="tsd-signature-type">IdToken</a>, fromTokenCache<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span>, stateString<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_src_response_authenticationresult_.authenticationresult.html" class="tsd-signature-type">AuthenticationResult</a></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/response/ResponseHandler.ts#L216">src/response/ResponseHandler.ts:216</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Creates an @AuthenticationResult from @CacheRecord , @IdToken , and a boolean that states whether or not the result is from cache.</p>
+								</div>
+								<p>Optionally takes a state string that is set as-is in the response.</p>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>cacheRecord: <a href="_src_cache_entities_cacherecord_.cacherecord.html" class="tsd-signature-type">CacheRecord</a></h5>
+								</li>
+								<li>
+									<h5>idTokenObj: <a href="_src_account_idtoken_.idtoken.html" class="tsd-signature-type">IdToken</a></h5>
+								</li>
+								<li>
+									<h5>fromTokenCache: <span class="tsd-signature-type">boolean</span></h5>
+								</li>
+								<li>
+									<h5><span class="tsd-flag ts-flagOptional">Optional</span> stateString: <span class="tsd-signature-type">string</span></h5>
+									<div class="tsd-comment tsd-typography">
+									</div>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <a href="_src_response_authenticationresult_.authenticationresult.html" class="tsd-signature-type">AuthenticationResult</a></h4>
+						</li>
+					</ul>
+				</section>
 			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
@@ -346,19 +310,16 @@
 								<a href="_src_response_responsehandler_.responsehandler.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="_src_response_responsehandler_.responsehandler.html#generateaccountentity" class="tsd-kind-icon">generate<wbr>Account<wbr>Entity</a>
-							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="_src_response_responsehandler_.responsehandler.html#generateauthenticationresult" class="tsd-kind-icon">generate<wbr>Authentication<wbr>Result</a>
-							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class">
-								<a href="_src_response_responsehandler_.responsehandler.html#generatecacherecord" class="tsd-kind-icon">generate<wbr>Cache<wbr>Record</a>
+								<a href="_src_response_responsehandler_.responsehandler.html#handleservertokenresponse" class="tsd-kind-icon">handle<wbr>Server<wbr>Token<wbr>Response</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_src_response_responsehandler_.responsehandler.html#validateserverauthorizationcoderesponse" class="tsd-kind-icon">validate<wbr>Server<wbr>Authorization<wbr>Code<wbr>Response</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_src_response_responsehandler_.responsehandler.html#validatetokenresponse" class="tsd-kind-icon">validate<wbr>Token<wbr>Response</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-static">
+								<a href="_src_response_responsehandler_.responsehandler.html#generateauthenticationresult" class="tsd-kind-icon">generate<wbr>Authentication<wbr>Result</a>
 							</li>
 						</ul>
 					</li>
@@ -390,6 +351,9 @@
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-interface"><span class="tsd-kind-icon">Interface</span></li>
+			</ul>
+			<ul class="tsd-legend">
+				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static method</span></li>
 			</ul>
 		</div>
 	</div>
