--- a/ref/msal-common/modules/_src_cache_utils_cachetypes_.html
+++ b/ref/msal-common/modules/_src_cache_utils_cachetypes_.html
@@ -89,38 +89,22 @@
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
 					<a name="accesstokencache" class="tsd-anchor"></a>
 					<h3>Access<wbr>Token<wbr>Cache</h3>
-					<div class="tsd-signature tsd-kind-icon">Access<wbr>Token<wbr>Cache<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
+					<div class="tsd-signature tsd-kind-icon">Access<wbr>Token<wbr>Cache<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><a href="../classes/_src_cache_entities_accesstokenentity_.accesstokenentity.html" class="tsd-signature-type">AccessTokenEntity</a><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/utils/CacheTypes.ts#L14">src/cache/utils/CacheTypes.ts:14</a></li>
 						</ul>
 					</aside>
-					<div class="tsd-type-declaration">
-						<h4>Type declaration</h4>
-						<ul class="tsd-parameters">
-							<li class="tsd-parameter-index-signature">
-								<h5><span class="tsd-signature-symbol">[</span>key: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><a href="../classes/_src_cache_entities_accesstokenentity_.accesstokenentity.html" class="tsd-signature-type">AccessTokenEntity</a></h5>
-							</li>
-						</ul>
-					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
 					<a name="accountcache" class="tsd-anchor"></a>
 					<h3>Account<wbr>Cache</h3>
-					<div class="tsd-signature tsd-kind-icon">Account<wbr>Cache<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
+					<div class="tsd-signature tsd-kind-icon">Account<wbr>Cache<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><a href="../classes/_src_cache_entities_accountentity_.accountentity.html" class="tsd-signature-type">AccountEntity</a><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/utils/CacheTypes.ts#L12">src/cache/utils/CacheTypes.ts:12</a></li>
 						</ul>
 					</aside>
-					<div class="tsd-type-declaration">
-						<h4>Type declaration</h4>
-						<ul class="tsd-parameters">
-							<li class="tsd-parameter-index-signature">
-								<h5><span class="tsd-signature-symbol">[</span>key: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><a href="../classes/_src_cache_entities_accountentity_.accountentity.html" class="tsd-signature-type">AccountEntity</a></h5>
-							</li>
-						</ul>
-					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
 					<a name="accountfilter" class="tsd-anchor"></a>
@@ -154,20 +138,12 @@
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
 					<a name="appmetadatacache" class="tsd-anchor"></a>
 					<h3>App<wbr>Metadata<wbr>Cache</h3>
-					<div class="tsd-signature tsd-kind-icon">App<wbr>Metadata<wbr>Cache<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
+					<div class="tsd-signature tsd-kind-icon">App<wbr>Metadata<wbr>Cache<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><a href="../classes/_src_cache_entities_appmetadataentity_.appmetadataentity.html" class="tsd-signature-type">AppMetadataEntity</a><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/utils/CacheTypes.ts#L16">src/cache/utils/CacheTypes.ts:16</a></li>
 						</ul>
 					</aside>
-					<div class="tsd-type-declaration">
-						<h4>Type declaration</h4>
-						<ul class="tsd-parameters">
-							<li class="tsd-parameter-index-signature">
-								<h5><span class="tsd-signature-symbol">[</span>key: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><a href="../classes/_src_cache_entities_appmetadataentity_.appmetadataentity.html" class="tsd-signature-type">AppMetadataEntity</a></h5>
-							</li>
-						</ul>
-					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
 					<a name="credentialcache" class="tsd-anchor"></a>
@@ -234,38 +210,22 @@
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
 					<a name="idtokencache" class="tsd-anchor"></a>
 					<h3>Id<wbr>Token<wbr>Cache</h3>
-					<div class="tsd-signature tsd-kind-icon">Id<wbr>Token<wbr>Cache<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
+					<div class="tsd-signature tsd-kind-icon">Id<wbr>Token<wbr>Cache<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><a href="../classes/_src_cache_entities_idtokenentity_.idtokenentity.html" class="tsd-signature-type">IdTokenEntity</a><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/utils/CacheTypes.ts#L13">src/cache/utils/CacheTypes.ts:13</a></li>
 						</ul>
 					</aside>
-					<div class="tsd-type-declaration">
-						<h4>Type declaration</h4>
-						<ul class="tsd-parameters">
-							<li class="tsd-parameter-index-signature">
-								<h5><span class="tsd-signature-symbol">[</span>key: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><a href="../classes/_src_cache_entities_idtokenentity_.idtokenentity.html" class="tsd-signature-type">IdTokenEntity</a></h5>
-							</li>
-						</ul>
-					</div>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-module">
 					<a name="refreshtokencache" class="tsd-anchor"></a>
 					<h3>Refresh<wbr>Token<wbr>Cache</h3>
-					<div class="tsd-signature tsd-kind-icon">Refresh<wbr>Token<wbr>Cache<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
+					<div class="tsd-signature tsd-kind-icon">Refresh<wbr>Token<wbr>Cache<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><a href="../classes/_src_cache_entities_refreshtokenentity_.refreshtokenentity.html" class="tsd-signature-type">RefreshTokenEntity</a><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/cache/utils/CacheTypes.ts#L15">src/cache/utils/CacheTypes.ts:15</a></li>
 						</ul>
 					</aside>
-					<div class="tsd-type-declaration">
-						<h4>Type declaration</h4>
-						<ul class="tsd-parameters">
-							<li class="tsd-parameter-index-signature">
-								<h5><span class="tsd-signature-symbol">[</span>key: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><a href="../classes/_src_cache_entities_refreshtokenentity_.refreshtokenentity.html" class="tsd-signature-type">RefreshTokenEntity</a></h5>
-							</li>
-						</ul>
-					</div>
 				</section>
 			</section>
 		</div>
