--- a/ref/msal-common/modules/_src_request_authorizationurlrequest_.html
+++ b/ref/msal-common/modules/_src_request_authorizationurlrequest_.html
@@ -89,6 +89,9 @@
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>TODO:</p>
+						</div>
 					</div>
 				</section>
 			</section>
