--- a/ref/msal-common/modules/_src_request_silentflowrequest_.html
+++ b/ref/msal-common/modules/_src_request_silentflowrequest_.html
@@ -90,14 +90,15 @@
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>SilentFlow parameters passed by the user to retrieve credentials silently</p>
+							<p>TODO:
+							SilentFlow parameters passed by the user to retrieve credentials silently</p>
 							<ul>
-								<li>scopes: Scopes the application is requesting access to</li>
-								<li>authority: Url of the authority which the application acquires tokens from</li>
-								<li>account: Account entity to lookup the credentials</li>
-								<li>forceRefresh: Forces silent requests to make network calls if true</li>
-								<li>correlationId: GUID set by the user to trace the request</li>
-								<li>redirectUri: The redirect URI where authentication responses can be received by your application. It must exactly match one of the redirect URIs registered in the Azure portal.</li>
+								<li>scopes:                Scopes the application is requesting access to</li>
+								<li>authority:             Url of the authority which the application acquires tokens from</li>
+								<li>account:               Account entity to lookup the credentials</li>
+								<li>forceRefresh:          Forces silent requests to make network calls if true</li>
+								<li>correlationId:         GUID set by the user to trace the request</li>
+								<li>redirectUri:           The redirect URI where authentication responses can be received by your application. It must exactly match one of the redirect URIs registered in the Azure portal.</li>
 							</ul>
 						</div>
 					</div>
