--- a/ref/msal-common/modules/_src_config_clientconfiguration_.html
+++ b/ref/msal-common/modules/_src_config_clientconfiguration_.html
@@ -136,15 +136,8 @@
 					</aside>
 					<div class="tsd-comment tsd-typography">
 						<div class="lead">
-							<p>Use the configuration object to configure MSAL Modules and initialize the base interfaces for MSAL.</p>
+							<p>TODO:</p>
 						</div>
-						<p>This object allows you to configure important elements of MSAL functionality:</p>
-						<ul>
-							<li>logger: logging for application</li>
-							<li>storage: this is where you configure storage implementation.</li>
-							<li>network: this is where you can configure network implementation.</li>
-							<li>crypto: implementation of crypto functions</li>
-						</ul>
 					</div>
 					<div class="tsd-type-declaration">
 						<h4>Type declaration</h4>
@@ -179,13 +172,10 @@
 					<div class="tsd-signature tsd-kind-icon">Library<wbr>Info<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>cpu<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>os<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>sku<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>version<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L85">src/config/ClientConfiguration.ts:85</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L94">src/config/ClientConfiguration.ts:94</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Telemetry info about library</p>
-						</div>
 					</div>
 					<div class="tsd-type-declaration">
 						<h4>Type declaration</h4>
@@ -211,13 +201,10 @@
 					<div class="tsd-signature tsd-kind-icon">Logger<wbr>Options<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>logLevel<span class="tsd-signature-symbol">?: </span><a href="../enums/_src_logger_logger_.loglevel.html" class="tsd-signature-type">LogLevel</a><span class="tsd-signature-symbol">; </span>loggerCallback<span class="tsd-signature-symbol">?: </span><a href="../interfaces/_src_logger_logger_.iloggercallback.html" class="tsd-signature-type">ILoggerCallback</a><span class="tsd-signature-symbol">; </span>piiLoggingEnabled<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L76">src/config/ClientConfiguration.ts:76</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L81">src/config/ClientConfiguration.ts:81</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Logger options to configure the logging that MSAL does.</p>
-						</div>
 					</div>
 					<div class="tsd-type-declaration">
 						<h4>Type declaration</h4>
@@ -240,17 +227,10 @@
 					<div class="tsd-signature tsd-kind-icon">System<wbr>Options<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>telemetry<span class="tsd-signature-symbol">?: </span><a href="_src_config_clientconfiguration_.html#telemetryoptions" class="tsd-signature-type">TelemetryOptions</a><span class="tsd-signature-symbol">; </span>tokenRenewalOffsetSeconds<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L68">src/config/ClientConfiguration.ts:68</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L69">src/config/ClientConfiguration.ts:69</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Library Specific Options</p>
-						</div>
-						<ul>
-							<li>tokenRenewalOffsetSeconds    - sets the window of offset needed to renew the token before expiry</li>
-							<li>telemetry                    - Telemetry options for library network requests</li>
-						</ul>
 					</div>
 					<div class="tsd-type-declaration">
 						<h4>Type declaration</h4>
@@ -270,18 +250,10 @@
 					<div class="tsd-signature tsd-kind-icon">Telemetry<wbr>Options<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>applicationName<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>applicationVersion<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L56">src/config/ClientConfiguration.ts:56</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L57">src/config/ClientConfiguration.ts:57</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
-						<div class="lead">
-							<p>Telemetry Config Options</p>
-							<ul>
-								<li>applicationName              - Name of the consuming apps application</li>
-								<li>applicationVersion           - Version of the consuming application</li>
-								<li>telemetryEmitter             - Function where telemetry events are flushed to</li>
-							</ul>
-						</div>
 					</div>
 					<div class="tsd-type-declaration">
 						<h4>Type declaration</h4>
@@ -308,7 +280,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L156">src/config/ClientConfiguration.ts:156</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L165">src/config/ClientConfiguration.ts:165</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -406,7 +378,7 @@
 					<div class="tsd-signature tsd-kind-icon">DEFAULT_<wbr>SYSTEM_<wbr>OPTIONS<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L99">src/config/ClientConfiguration.ts:99</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L108">src/config/ClientConfiguration.ts:108</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
@@ -415,7 +387,7 @@
 						<div class="tsd-signature tsd-kind-icon">telemetry<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">null</span><span class="tsd-signature-symbol"> = null</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L101">src/config/ClientConfiguration.ts:101</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L110">src/config/ClientConfiguration.ts:110</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -425,7 +397,7 @@
 						<div class="tsd-signature tsd-kind-icon">token<wbr>Renewal<wbr>Offset<wbr>Seconds<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = DEFAULT_TOKEN_RENEWAL_OFFSET_SEC</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L100">src/config/ClientConfiguration.ts:100</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-common/src/config/ClientConfiguration.ts#L109">src/config/ClientConfiguration.ts:109</a></li>
 							</ul>
 						</aside>
 					</section>
